tests/errors/group-cont-assign-conflict.expect
---CODE---
1
---STDERR---
Error: Malformed Structure: Obviously conflicting assignments found:
13 |      r.in = 32'd10;
16 |    r.in = w1.out;

tests/errors/group-cont-assign-conflict.futil
19 |    do_r;
   |    ^^^^^ Assigments activated by group enable
